@@ -1254,7 +1254,13 @@ local bool legal_namechar (chart ch) {
   return (graphic_char_p(ch) && !(c=='\\') && !(c=='/') && !(c==':'));
 #endif
 #ifdef PATHNAME_WIN32
-  return ((c >= 1) && (c <= 127) && (c != 34) /*&& (c != 42)*/ && (c != 47) && (c != 58) && (c != 60) && (c != 62) /*&& (c != 63)*/ && (c != 92)) || (c == 131) || ((c >= 160) && (c != 197) && (c != 206));
+  return ((c >= 1) && (c <= 127) &&
+          (c != ' ' /*34*/) /*&& (c != '*'==42)*/ &&
+          (c != '/' /*47*/) && (c != ':' /*58*/) &&
+          (c != '<' /*60*/) && (c != '>' /*62*/) /*&& (c != '?'==63)*/ &&
+          (c != '\\' /*92*/))
+    || (c == 131)
+    || (c >= 160 /* #\NO-BREAK_SPACE */);
 #endif
 #ifdef PATHNAME_RISCOS
   return (graphic_char_p(ch) && !(c==':') && !(c=='.')
