@@ -1,3 +1,9 @@
+2001-07-18  Arseny Slobodjuck <ampy@crosswinds.net>
+	    Sam Steingold  <sds@gnu.org>
+
+	* pathname.d (legal_namechar): PATHNAME_WIN32:
+	 permit characters 197 and 206 (legal in CP1251)
+
 2001-07-24  Sam Steingold  <sds@gnu.org>
 
 	* init.lisp (*terminal-encoding*): fixed the export statement spelling
